// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditDisplayNameDialog /> renders correctly 1`] = `
<Modal
  className="edit-cluster-modal"
  isPending={false}
  isPrimaryDisabled={false}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Scale Cluster"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      inputMode="numeric"
      label="Compute nodes"
      min={4}
      name="nodes_compute"
      validate={[Function]}
    />
    <FormGroup
      fieldId="load_balancers"
      label="Load balancers"
    >
      <Field
        component={[Function]}
        currentValue="4"
        disabled={false}
        label="Load Balancers"
        name="load_balancers"
      />
    </FormGroup>
    <FormGroup
      fieldId="persistent_storage"
      label="Persistent storage"
    >
      <Field
        component={[Function]}
        currentValue="107374182400"
        disabled={false}
        label="Persistent Storage"
        name="persistent_storage"
      />
    </FormGroup>
  </Form>
</Modal>
`;

exports[`<EditDisplayNameDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  className="edit-cluster-modal"
  isPending={false}
  isPrimaryDisabled={false}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Scale Cluster"
>
  <ErrorBox
    message="Error editing cluster"
    response={
      Object {
        "erorMessage": "this is an error",
        "error": true,
      }
    }
  />
  <Form
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      inputMode="numeric"
      label="Compute nodes"
      min={4}
      name="nodes_compute"
      validate={[Function]}
    />
    <FormGroup
      fieldId="load_balancers"
      label="Load balancers"
    >
      <Field
        component={[Function]}
        currentValue="4"
        disabled={false}
        label="Load Balancers"
        name="load_balancers"
      />
    </FormGroup>
    <FormGroup
      fieldId="persistent_storage"
      label="Persistent storage"
    >
      <Field
        component={[Function]}
        currentValue="107374182400"
        disabled={false}
        label="Persistent Storage"
        name="persistent_storage"
      />
    </FormGroup>
  </Form>
</Modal>
`;
